--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_PAPER_BA_D5.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_PAPER_BA_D5.jrxml
@@ -3,16 +3,28 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="TA_PAPER_BA_D5" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="NoDataSection" columnWidth="800" leftMargin="20" rightMargin="22" topMargin="40" bottomMargin="40" isIgnorePagination="true" uuid="844b31d5-6231-44ba-8b68-d7f128e3c42f">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
-	<parameter name="docPlace" class="java.lang.String"/>
-	<parameter name="testimonyText" class="java.lang.String"/>
-	<parameter name="refDocDate" class="java.util.Date"/>
+	<parameter name="newRegId" class="java.lang.String"/>
+	<parameter name="dutyGroupId" class="java.lang.String"/>
+	<parameter name="facFullname" class="java.lang.String"/>
+	<parameter name="auJobResp" class="java.lang.String"/>
+	<parameter name="paperBaNumber" class="java.lang.String"/>
+	<parameter name="startDate" class="java.lang.String"/>
+	<parameter name="endDate" class="java.lang.String"/>
+	<parameter name="commentText5" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
-	<field name="recNo" class="java.lang.String"/>
-	<field name="docName" class="java.lang.String"/>
-	<field name="docQty" class="java.lang.String"/>
-	<field name="docComment" class="java.lang.String"/>
+	<field name="goodsDesc" class="java.lang.String"/>
+	<field name="taxSubmissionDate" class="java.lang.String"/>
+	<field name="netTaxByValue" class="java.math.BigDecimal"/>
+	<field name="netTaxByQty" class="java.math.BigDecimal"/>
+	<field name="netTaxAmt" class="java.math.BigDecimal"/>
+	<field name="anaNetTaxByValue" class="java.math.BigDecimal"/>
+	<field name="anaNetTaxByQty" class="java.math.BigDecimal"/>
+	<field name="anaNetTaxAmt" class="java.math.BigDecimal"/>
+	<field name="diffNetTaxByValue" class="java.math.BigDecimal"/>
+	<field name="diffNetTaxByQty" class="java.math.BigDecimal"/>
+	<field name="diffNetTaxAmt" class="java.math.BigDecimal"/>
 	<title>
 		<band height="95" splitType="Stretch">
 			<textField>
@@ -41,7 +53,7 @@
 				<textElement textAlignment="Left">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{docPlace}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{newRegId}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="105" y="40" width="135" height="1" uuid="75439041-561b-4271-a61d-7f432b5ef7bd"/>
@@ -61,7 +73,7 @@
 				<textElement textAlignment="Left">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{docPlace}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{dutyGroupId}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="340" y="40" width="190" height="1" uuid="54e1099a-4e07-4629-83af-874085e3e0aa"/>
@@ -88,7 +100,7 @@
 				<textElement textAlignment="Left">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{docPlace}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{facFullname}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="140" y="62" width="390" height="1" uuid="8e7c6c97-2e9f-4009-9af9-7b8fcfdfca48"/>
@@ -128,7 +140,7 @@
 				<textElement textAlignment="Left">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{docPlace}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{auJobResp}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="122" y="84" width="100" height="1" uuid="249a81ff-2e15-46b4-a563-5f130d320ab3"/>
@@ -168,7 +180,7 @@
 				<textElement textAlignment="Left">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{docPlace}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{paperBaNumber}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="122" y="69" width="98" height="22" uuid="d337315b-4c5a-4c06-894d-60d0e0270424"/>
@@ -182,7 +194,7 @@
 				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{refDocDate})]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{startDate}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="225" y="69" width="15" height="22" uuid="535fd204-51ef-4766-bfa3-f3970dcb0e2e"/>
@@ -209,7 +221,7 @@
 				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{refDocDate})]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{endDate}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
@@ -377,77 +389,77 @@
 				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{recNo}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{REPORT_COUNT}.intValue()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="240" y="0" width="60" height="22" uuid="b336dcae-4b87-4c69-a860-5549e94a6872"/>
-				<box>
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{docQty}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{netTaxByValue}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="300" y="0" width="60" height="22" uuid="4bdc7c45-fe86-4e65-8f59-8f0525be3d05"/>
-				<box leftPadding="4">
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Left">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{docComment}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{netTaxByQty}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="430" y="0" width="60" height="22" uuid="19545da1-fc61-4b14-b4bf-b56e0268f74b"/>
-				<box leftPadding="4">
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Left">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{docComment}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{anaNetTaxByValue}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="490" y="0" width="60" height="22" uuid="4debc6b7-3d95-4c8e-8b07-bb271869df79"/>
-				<box>
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{docQty}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{anaNetTaxByQty}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="610" y="0" width="60" height="22" uuid="ba21052d-5110-4f02-b51a-60c7779d82f1"/>
-				<box leftPadding="4">
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Left">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{docComment}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{diffNetTaxByValue}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="670" y="0" width="60" height="22" uuid="e6bd3a1c-2ccc-4816-a5de-7b8d739ac0a5"/>
-				<box leftPadding="4">
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Left">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{docComment}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{diffNetTaxByQty}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="360" y="0" width="70" height="22" uuid="62992828-4afd-4dd6-96ed-ead41b0adb29"/>
-				<box leftPadding="4">
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Left">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{docComment}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{netTaxAmt}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="40" y="0" width="120" height="22" uuid="b8148e8a-e9bd-4172-867a-1e59b76e509c"/>
@@ -457,27 +469,27 @@
 				<textElement textAlignment="Left">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{docName}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{goodsDesc}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="550" y="0" width="60" height="22" uuid="ef1ef51b-bf99-4b05-83bc-d4b0bc614c52"/>
-				<box>
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{docQty}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{anaNetTaxAmt}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="730" y="0" width="70" height="22" uuid="10037878-8456-475e-849b-666a407e21f9"/>
-				<box leftPadding="4">
+				<box leftPadding="4" rightPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Left">
+				<textElement textAlignment="Right">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{docComment}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{diffNetTaxAmt}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="160" y="0" width="80" height="22" uuid="a5c3f59b-5de3-449b-8a33-88366a2e2cdf"/>
@@ -487,7 +499,7 @@
 				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{docQty}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{taxSubmissionDate}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -523,7 +535,7 @@
 				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{testimonyText}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{commentText5}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
