--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_PAPER_BA_D8_Y1.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_PAPER_BA_D8_Y1.jrxml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="TA_PAPER_BA_D2" pageWidth="595" pageHeight="842" whenNoDataType="NoDataSection" columnWidth="460" leftMargin="80" rightMargin="55" topMargin="55" bottomMargin="55" isIgnorePagination="true" uuid="844b31d5-6231-44ba-8b68-d7f128e3c42f">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="TA_PAPER_BA_D8_Y1" pageWidth="595" pageHeight="842" whenNoDataType="NoDataSection" columnWidth="460" leftMargin="80" rightMargin="55" topMargin="55" bottomMargin="55" isIgnorePagination="true" uuid="844b31d5-6231-44ba-8b68-d7f128e3c42f">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="newRegId" class="java.lang.String"/>
 	<parameter name="dutyGroupId" class="java.lang.String"/>
 	<parameter name="facFullname" class="java.lang.String"/>
 	<parameter name="auJobResp" class="java.lang.String"/>
 	<parameter name="paperBaNumber" class="java.lang.String"/>
-	<parameter name="startDate" class="java.lang.String"/>
-	<parameter name="endDate" class="java.lang.String"/>
-	<parameter name="commentText2" class="java.lang.String"/>
+	<parameter name="startDate" class="java.util.Date"/>
+	<parameter name="endDate" class="java.util.Date"/>
+	<parameter name="yearIncType" class="java.lang.String"/>
+	<parameter name="yearNum" class="java.lang.String"/>
+	<parameter name="commentText8" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
-	<field name="goodsDesc" class="java.lang.String"/>
-	<field name="taxInformPrice" class="java.math.BigDecimal"/>
-	<field name="informPrice" class="java.math.BigDecimal"/>
-	<field name="diffTaxInformPrice" class="java.math.BigDecimal"/>
+	<field name="no" class="java.lang.String"/>
+	<field name="taxMonth" class="java.lang.String"/>
+	<field name="incomeCurrentYearAmt" class="java.lang.String"/>
+	<field name="incomeLastYear1Amt" class="java.lang.String"/>
+	<field name="diffIncomeLastYear1Amt" class="java.lang.String"/>
+	<field name="diffIncomeLastYear1Pnt" class="java.lang.String"/>
 	<title>
-		<band height="120" splitType="Stretch">
+		<band height="141" splitType="Stretch">
 			<textField>
 				<reportElement x="0" y="25" width="105" height="22" uuid="24d5cb26-b161-4830-ab11-577dd160817f"/>
 				<textElement>
@@ -31,7 +35,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="TH Sarabun New" size="18" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["การวิเคราะห์ราคาขายปลีกแนะนำตามแบบแจ้ง"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["การวิเคราะห์รายได้ เปรียบเทียบเดือนเดียวกันกับปีก่อนหน้า"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="105" y="25" width="115" height="22" uuid="c5ce5dfa-b0c9-46da-b1b6-cd136d97441e"/>
@@ -186,7 +190,7 @@
 				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{startDate}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{startDate})]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="225" y="91" width="15" height="22" uuid="535fd204-51ef-4766-bfa3-f3970dcb0e2e"/>
@@ -213,14 +217,116 @@
 				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{endDate}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{endDate})]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="351" y="113" width="40" height="22" uuid="d5724d31-e579-4a93-81b3-629322aa9ca9"/>
+				<textElement>
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["จำนวน"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="184" y="113" width="20" height="22" uuid="2c4c7943-c0d7-4968-9b95-2dcee1494dbf"/>
+				<textElement verticalAlignment="Bottom">
+					<font fontName="DejaVu Sans" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["2".equals( $P{yearIncType} )?"\u2611" : "\u2610"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="20" y="113" width="154" height="22" uuid="9b607ba1-8fea-4a98-95ef-154ae0d4eca3"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["จำนวนเงินภาษีก่อนหักรายการต่างๆ"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="113" width="20" height="22" uuid="b49df875-8a71-4b6e-b4d4-9a83a9a6686d"/>
+				<textElement verticalAlignment="Bottom">
+					<font fontName="DejaVu Sans" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["1".equals( $P{yearIncType} )?"\u2611" : "\u2610"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="204" y="113" width="130" height="22" uuid="bdf02003-d325-4421-940b-bb31c29be836"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom">
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["จำนวนเงินรวมภาษีที่ต้องชำระ"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="439" y="113" width="21" height="22" uuid="365277d4-9196-4ee8-931b-65c98e55442b"/>
+				<textElement>
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["ปี"]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="391" y="113" width="48" height="22" uuid="75349607-3270-40ac-bd86-0928cc238082"/>
+				<box leftPadding="2">
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["1"]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="391" y="128" width="48" height="1" uuid="1ef2dfe2-2403-4dd0-9daa-64d924f56b1e"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
 		</band>
 	</title>
 	<columnHeader>
 		<band height="45">
 			<textField>
-				<reportElement x="0" y="0" width="30" height="45" uuid="c846e19b-638c-467e-a7cd-bf6909533282"/>
+				<reportElement x="100" y="0" width="90" height="45" uuid="1009529f-6b6a-4c73-8a70-9cc22eb10251"/>
+				<box>
+					<pen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["รายได้ปีปัจจุบัน (บาท)"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="190" y="0" width="90" height="45" uuid="6e73fe8c-bd5d-470d-8259-bc77d6da133e"/>
+				<box>
+					<pen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["รายได้ปีย้อน-\nหลัง 1 ปี (บาท)"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="280" y="0" width="90" height="45" uuid="ef99b71e-6172-4b93-82e8-4bf842584656"/>
+				<box>
+					<pen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["ผลต่างย้อน-\nหลัง 1 ปี (บาท)"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="30" y="0" width="70" height="45" uuid="053ee361-3553-401d-9091-bc41b6151936"/>
+				<box>
+					<pen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA["เดือน"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="0" width="30" height="45" uuid="7cac60b3-d787-41f6-a4de-c17e784acc86"/>
 				<box>
 					<pen lineWidth="0.5"/>
 				</box>
@@ -230,99 +336,78 @@
 				<textFieldExpression><![CDATA["ลำดับ"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="30" y="0" width="140" height="45" uuid="f7503ce5-433f-4c6e-8889-48b0081f67d9"/>
+				<reportElement x="370" y="0" width="90" height="45" uuid="f87046dc-6a6f-4f92-8af3-f239192f9b4d"/>
 				<box>
 					<pen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["รายการ"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="170" y="0" width="140" height="45" uuid="a62032f0-309b-4d07-9029-8e646c84b589"/>
-				<box>
-					<pen lineWidth="0.5"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="TH Sarabun New" size="16"/>
-				</textElement>
-				<textFieldExpression><![CDATA["ข้อมูลจากแบบรายการ\n"+
-"ภาษีสรรพสามิต"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="310" y="0" width="90" height="45" uuid="a4ea6029-bcc1-4816-804a-86ed767474d9"/>
-				<box>
-					<pen lineWidth="0.5"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="TH Sarabun New" size="16"/>
-				</textElement>
-				<textFieldExpression><![CDATA["ข้อมูลแบบแจ้งราคา\nขายปลีกแนะนำ"]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="400" y="0" width="60" height="45" uuid="3d57ee7a-67bc-4379-8700-9be24533c9ae"/>
-				<box>
-					<pen lineWidth="0.5"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="TH Sarabun New" size="16"/>
-				</textElement>
-				<textFieldExpression><![CDATA["ผลต่าง"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["ผลต่างย้อนหลัง 1 ปี (ร้อยละ)"]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="22" splitType="Stretch">
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="0" width="30" height="22" uuid="3ae8ec31-b8e1-4ef1-84d9-d11948d6e58c"/>
+				<reportElement x="190" y="0" width="90" height="22" uuid="ec8d4e0d-2121-416c-9457-e9e1fa5b9234"/>
 				<box>
 					<pen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$V{REPORT_COUNT}.intValue()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeLastYear1Amt}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="30" y="0" width="140" height="22" uuid="b8148e8a-e9bd-4172-867a-1e59b76e509c"/>
+				<reportElement x="0" y="0" width="30" height="22" uuid="43340fa7-cbcb-427f-8a93-36d164c2425d"/>
+				<box>
+					<pen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{no}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="280" y="0" width="90" height="22" uuid="10a5c83f-f12d-437d-97bf-a7c31e949524"/>
+				<box>
+					<pen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center">
+					<font fontName="TH Sarabun New" size="16"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{diffIncomeLastYear1Amt}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="30" y="0" width="70" height="22" uuid="41cc9d7a-351a-4d36-8c92-e9dc5cd737f4"/>
 				<box leftPadding="4">
 					<pen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Left">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{goodsDesc}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{taxMonth}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="170" y="0" width="140" height="22" uuid="b336dcae-4b87-4c69-a860-5549e94a6872"/>
-				<box leftPadding="4" rightPadding="4">
+				<reportElement x="100" y="0" width="90" height="22" uuid="a858078e-c1dd-4c25-917f-fc7ea2627ae1"/>
+				<box>
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Right">
+				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{taxInformPrice}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{incomeCurrentYearAmt}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="310" y="0" width="90" height="22" uuid="4bdc7c45-fe86-4e65-8f59-8f0525be3d05"/>
-				<box leftPadding="4" rightPadding="4">
+				<reportElement x="370" y="0" width="90" height="22" uuid="736e35fa-3852-42e5-858c-e086f038dbe4"/>
+				<box>
 					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Right">
+				<textElement textAlignment="Center">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{informPrice}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="400" y="0" width="60" height="22" uuid="19545da1-fc61-4b14-b4bf-b56e0268f74b"/>
-				<box leftPadding="4" rightPadding="4">
-					<pen lineWidth="0.5"/>
-				</box>
-				<textElement textAlignment="Right">
-					<font fontName="TH Sarabun New" size="16"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{diffTaxInformPrice}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{diffIncomeLastYear1Pnt}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -358,7 +443,7 @@
 				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font fontName="TH Sarabun New" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{commentText2}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{commentText8}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="0" y="69" width="460" height="22" uuid="a89cffdd-9200-4611-b858-48f882afb63f"/>
